--- a/template.htm
+++ b/template.htm
@@ -19,7 +19,7 @@ Date: 12/02/2025
 
       <header>
         <div id="tab-desk">
-          <a href="index.html"><img src="images/ana 1.png" alt="Ana 1"></a>
+          <a href="index.html"><img src="images/ana%201.png" alt="Ana 1"></a>
         </div>
         <div id="mobile">
           <h1>&#127801; Ana Rosa Pena Cabrera</h1>
