--- a/template.htm
+++ b/template.htm
@@ -2,7 +2,7 @@
 <!--
 Student Name: Darwin Pena Cabrera
 File Name: template-BioSite
-Date: 12/02/2025
+Date: 12/21/2025
 -->
 <html lang="en">
   <head>
@@ -30,7 +30,7 @@ Date: 12/02/2025
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li> 
-          <li><a href="about.html">About Us</a></li> 
+          <li><a href="about.html">About</a></li> 
           <li><a href="Hobby.html">Hobby</a></li>
         </ul>
       </nav>
